--- a/app/templates/load/confirm_rate.html
+++ b/app/templates/load/confirm_rate.html
@@ -223,7 +223,7 @@
 										
 										<div class="row bol-0-info">
 											<div clas="col-sm-12">
-												<div class="panel panel-default">
+												<div class="well">
 													<div class="panel-heading">
 														<i class="clip-menu"></i>
 														<span id="locations-{{ loop.index - 1 }}-address">{{ location.city.data }}, {{ location.state.data }} {{ location.postal_code.data }}	</span>
