--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -27,7 +27,7 @@
                                             <span class="title"> New Load </span>
                                         </a>
                                     {% else %}
-                                        <a href="{{ url_for('loads.post') }}">
+                                        <a href="{{ url_for('loads.create') }}">
                                             <span class="title"> New Load </span>
                                         </a>
                                     {% endif %}
