--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -153,7 +153,7 @@
 										</tr>
 										<tr>
 											<td>Notes</td>
-											<td>{{ location.pickup_details.notes }}</td>
+											<td>{{ location.notes }}</td>
 										</tr>
 										{% else %}
 										<tr>
@@ -162,7 +162,7 @@
 										</tr>
 										<tr>
 											<td>Notes</td>
-											<td>{{ location.delivery_details.notes }}</td>
+											<td>{{ location.notes }}</td>
 										</tr>
 										{% endif %}
 
@@ -303,7 +303,7 @@
 										</tr>
 										<tr>
 											<td>Notes</td>
-											<td>{{ location.pickup_details.notes }}</td>
+											<td>{{ location.notes }}</td>
 										</tr>
 										{% else %}
 										<tr>
@@ -312,7 +312,7 @@
 										</tr>
 										<tr>
 											<td>Notes</td>
-											<td>{{ location.delivery_details.notes }}</td>
+											<td>{{ location.notes }}</td>
 										</tr>
 										{% endif %}
 
