--- a/app/templates/base_map.html
+++ b/app/templates/base_map.html
@@ -87,17 +87,18 @@
 
 
                 {% endfor %}
+                {% if load.truck.tracker is defined %}
+                    {% if load.truck.tracker[-1] is not none %}
+                        var myLatlng = new google.maps.LatLng( {{load.truck.tracker[-1].latitude}}, {{load.truck.tracker[-1].longitude}});
 
-                {% if load.truck.tracker[-1] is not none %}
-                    var myLatlng = new google.maps.LatLng( {{load.truck.tracker[-1].latitude}}, {{load.truck.tracker[-1].longitude}});
-
-                    var marker = new google.maps.Marker({
-                        position: myLatlng,
-                        map: map,
-                        icon: '{{ static('backend/images/map_icons/truck3.png') }}',
-                        title: 'Current Location'
-                    });
-                    allMarkers.push(marker);
+                        var marker = new google.maps.Marker({
+                            position: myLatlng,
+                            map: map,
+                            icon: '{{ static('backend/images/map_icons/truck3.png') }}',
+                            title: 'Current Location'
+                        });
+                        allMarkers.push(marker);
+                    {% endif %}
                 {% endif %}
 
                 if(allMarkers.length == 0) {
