--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -119,6 +119,9 @@
 							{{ register_form.company_name(class="form-control", placeholder="Company Name") }}
 						</div>
 						<div class="form-group">
+							{{ register_form.mco(class="form-control", placeholder="MCO #") }}
+						</div>
+						<div class="form-group">
 							{{ register_form.account_type(class="form-control") }}
 						</div>
 						<div class="form-group">
