--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -25,6 +25,9 @@
 							{{ register_form.company_name(class="form-control", placeholder="Company Name") }}
 						</div>
 						<div class="form-group">
+							{{ register_form.mco(class="form-control", placeholder="MCO #") }}
+						</div>
+						<div class="form-group">
 							{{ register_form.address(class="form-control", placeholder="Street Address") }}
 						</div>
 						<div class="form-group">
