--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -125,7 +125,7 @@
 							{{ register_form.account_type(class="form-control") }}
 						</div>
 						<div class="form-group">
-							{{ register_form.address(class="form-control", placeholder="Street Address") }}
+							{{ register_form.address1(class="form-control", placeholder="Street Address") }}
 						</div>
 						<div class="form-group">
 							{{ register_form.city(class="form-control", placeholder="City") }}
