--- a/app/templates/static/contact.html
+++ b/app/templates/static/contact.html
@@ -189,6 +189,15 @@
 							<p>
 								Reach out to the Tron Logistics team for any questions you may have.
 							</p>
+							<p>For website or mobile application support, please John at:<p>
+								<ul class="list-unstyled">
+								<li>
+									<strong>Phone:</strong> (847) 703-0013
+								</li>
+								<li>
+									<strong>Email:</strong> john@tronlogistics.com
+								</li>
+							</ul>
 							<hr>
 							<h4>Business Hours</h4>
 							<ul class="list-unstyled">
