--- a/app/templates/static/contact.html
+++ b/app/templates/static/contact.html
@@ -189,13 +189,13 @@
 							<p>
 								Reach out to the Tron Logistics team for any questions you may have.
 							</p>
-							<p>For website or mobile application support, please John at:<p>
+							<p>For website or mobile application support, please use the form on this page or contact us at the following:<p>
 								<ul class="list-unstyled">
 								<li>
-									<strong>Phone:</strong> (847) 703-0013
+									<strong>Phone:</strong> (773) 969-6412
 								</li>
 								<li>
-									<strong>Email:</strong> john@tronlogistics.com
+									<strong>Email:</strong> contact@tronlogistics.com
 								</li>
 							</ul>
 							<hr>
